k8s/02-n8n_manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    istio-injection: enabled
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
    version: "2.4.5"
spec:
  replicas: 1

  selector:
    matchLabels:
      app: n8n

  strategy:
    canary:
      maxUnavailable: 0
      maxSurge: 1
      steps:
        - setWeight: 50
        - pause:
            duration: 30s
        - setWeight: 100
        - pause:
            duration: 30s

  template:
    metadata:
      labels:
        app: n8n
      annotations:
        sidecar.istio.io/inject: "true"
        #traffic.sidecar.istio.io/excludeInboundPorts: "5678,443,80"
        #traffic.sidecar.istio.io/excludeOutboundPorts: "5432"
    
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - rasppi516

      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000

      containers:
        - name: n8n
          #image: n8nio/n8n:2.20.11
          #image: n8nio/n8n:2.26.3
          image: n8nio/n8n:2.34
          imagePullPolicy: Always

          ports:
            - containerPort: 5678

          volumeMounts:
            - name: data
              mountPath: /home/node/.n8n

          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: n8n-data


---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  selector:
    app: n8n
  ports:
    - name: https
      port: 5678
      targetPort: 5678
      protocol: TCP
  type: ClusterIP
