k8s/02.1-peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: n8n-mtls
  namespace: n8n
spec:
  mtls:
    mode: STRICT  # PERMISSIVE | STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: n8n
  namespace: n8n
spec:
  host: n8n
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL      # DISABLE |  ISTIO_MUTUAL | SIMPLE
